# secops-toolkit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MCP-IMPLEMENTATION-SUMMARY.md  Makefile  README-MCP.md  README.md  docker-compose.yml  pyproject.toml  run.bat  run.sh  secops-toolbox.spec  secops_nginx_waf.conf  skill.md  使用说明.md  模块架构总览.md
secops-cli/: pyproject.toml
secops-cli/secops_cli/: __init__.py  __main__.py  main.py  secopsctl.py
secops-cli/tests/: test_cli.py  test_enhanced_modules.py  test_target.py
secops-defense/: pyproject.toml
secops-defense/secops_defense/: __init__.py  ai_tuning.py  anomaly.py  cron.py  evaluator.py  firewall.py  github_intel.py  hardener.py  remediation.py  reporter.py  rootkit_check.py  rule_generator.py  threat_intel.py  tls_audit.py  waf.py
secops-defense/secops_defense/scripts/: health_check.sh
secops-defense/secops_defense/templates/: report_template.html
secops-defense/tests/: test_anomaly.py  test_cron.py  test_evaluator.py  test_firewall.py  test_hardener.py  test_hardener_extra.py  test_reporter.py  test_rule_generator.py  test_threat_intel.py  test_waf.py
secops-offense/: pyproject.toml
secops-offense/secops_offense/: __init__.py  analyzer.py  arsenal.py  github_offense.py  guide.py  kali_builder.py  online_scanner.py  reporter.py  scanner.py
secops-offense/secops_offense/attack_engine/: __init__.py  auth.py  auth_breaker.py  browser_engine.py  dynamic_attack.py  engine.py  finding.py  robots_parser.py
secops-offense/secops_offense/attack_engine/modules/: base.py  cors.py  crlf.py  deserialization.py  idor.py  infoleak.py  jwt.py  ldap.py  lfi.py  nosqli.py  rce.py  redirect.py  sqli.py  ssrf.py  ssti.py  subdomain_takeover.py  xss.py  xxe.py
secops-offense/secops_offense/cache/github_payloads/: _meta.json  latest_payloads.json
secops-offense/secops_offense/src/: README.md  __init__.py
secops-offense/secops_offense/src/prompts/: hermes_bridge_src_integration.py  hermes_src_system.txt  p00_main_system.txt  (+9 more)
secops-offense/tests/: test_detectors.py  test_engine.py  test_finding.py  test_new_detectors.py
(+58 files in other folders)
