[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecurity-ops"
version = "3.0.0"
description = "SecOps 自动化安全运维工具箱 - 渗透测试 + 系统维护 双子项目"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "psutil>=5.8.0",
]

[project.scripts]
secops = "secops_cli.main:main"
secops-mcp = "secops_core.mcp_server:main"
secopsctl = "secops_cli.secopsctl:main"

[tool.setuptools.packages.find]
include = ["secops_core*", "secops_offense*", "secops_defense*", "secops_cli*"]

[tool.setuptools.package-data]
secops_defense = ["templates/*", "scripts/*"]
secops_offense = ["src/prompts/*"]
