[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secops-cli"
version = "2.0.0"
description = "SecOps 统一命令行入口 - 渗透测试 + 系统维护"
requires-python = ">=3.8"
dependencies = [
    "secops-core",
    "secops-offense",
    "secops-defense",
]

[project.scripts]
secops = "secops_cli.main:main"

[tool.setuptools.packages.find]
include = ["secops_cli*"]
