[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secops-defense"
version = "2.0.0"
description = "SecOps 系统维护子项目 - 安全体检/加固/防火墙/威胁情报"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "psutil>=5.8.0",
]

[tool.setuptools.packages.find]
include = ["secops_defense*"]

[tool.setuptools.package-data]
secops_defense = ["templates/*", "scripts/*"]
