[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secops-offense"
version = "2.0.0"
description = "SecOps 渗透测试子项目 - 漏洞验证引擎/弹药库/GitHub学习"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "jinja2>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["secops_offense*"]
